syntax = "proto3";

package hero;

service HeroService {
  rpc FindOne (HeroById) returns (Hero);
  rpc GetAll (Empty) returns (Heroes);
  rpc FindMany (HeroByIds) returns (Heroes);

  rpc GetAllStream (Empty) returns (stream Hero);
  rpc FindManyStream (stream HeroById) returns (stream Hero);

  rpc BidiHello(stream HelloRequest) returns (stream HelloResponse);
  rpc LotsOfGreetings(stream HelloRequest) returns (HelloResponse);
}

message Empty {}

message HeroById {
  int32 id = 1;
}
message HeroByIds {
  repeated int32 ids = 1;
}

message Hero {
  int32 id = 1;
  string name = 2;
}
message Heroes {
  repeated Hero heroes = 1;
}



message HelloRequest {
  string greeting = 1;
}

message HelloResponse {
  string reply = 1;
}